--- a/medcorponline/medcorponline.csproj
+++ b/medcorponline/medcorponline.csproj
@@ -2228,6 +2228,13 @@
     <Content Include="lib\booststrap\bootstrap-icons-1.13.1\zoom-out.svg" />
     <Content Include="lib\chartjs\chart.js" />
     <Content Include="lib\chartjs\chartjs-plugin-datalabels.min.js" />
+    <Content Include="lib\img\CalendarioV4.png" />
+    <Content Include="lib\img\ImgDerIni.png" />
+    <Content Include="lib\img\ImgDerV55.png" />
+    <Content Include="lib\img\ImgDerV5.png" />
+    <Content Include="lib\img\ImgIzqFin.png" />
+    <Content Include="lib\img\ImgIzqV55.png" />
+    <Content Include="lib\img\ImgIzqV5.png" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
     <Content Include="Scripts\bootstrap.esm.js" />
